Fixed skrollr on mobile blocking and index page mobile issues

--- a/navigation.css
+++ b/navigation.css
@@ -18,7 +18,7 @@
 @media (max-width: 768px){
     .nav-logo {
     margin-left: 10px;
-    width: 18%;
+    width: 12%;
 }
 }
 
